# root-beer-reviews

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GIT_WORKFLOW.md  LICENSE  PWA_SETUP.md  README.md  ROADMAP.md  RootBeerTastingGuide  RootBeerTastingGuide.md  SECRET_KEY_GENERATION.md  SETUP.md  commit-message.txt  env.example  generate_icons.py  pyproject.toml  requirements.txt
app/: __init__.py  auth.py  config.py  database.py  main.py  seed_data.py  templates_helpers.py  utils.py
app/models/: __init__.py  admin_user.py  flavor_note.py  metadata.py  review.py  rootbeer.py
app/routes/: admin.py  auth.py  public.py
app/static/: manifest.json  service-worker.js
app/static/css/: style.css
app/static/icons/: README.md
app/templates/: base.html
app/templates/admin/: account.html  base.html  dashboard.html  login.html  metadata.html
app/templates/admin/flavor-notes/: list.html
app/templates/admin/reviews/: list.html  new.html  view.html
app/templates/admin/rootbeers/: list.html  new.html  view.html
app/templates/partials/: pagination.html
app/templates/public/: home.html  review.html  rootbeer.html
app/utils/: __init__.py  images.py  pagination.py
tests/: README.md  __init__.py  conftest.py  test_admin_routes.py  test_auth.py  test_models.py  test_public_routes.py  test_utils.py
